# current-location

./: .envrc  .gitignore  Cargo.toml  README.md  codebook.toml  flake.nix  rust-toolchain.toml
src/: lib.rs  main.rs  process.rs  tosubstr.rs  walk.rs
