[package]
name = "current-location"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
hyprland = "0.4.0-beta.3"
serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.16.1"
sysinfo = "0.37.2"
tokio = { version = "1.48.0" }
