[package]
name = "current-location"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
hyprland = "0.4.0-beta.3"
itertools = "0.14.0"
procfs = "0.18.0"
rustc-hash = "2.1.1"
serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.16.1"
tokio = { version = "1.48.0" }

# improve runtime performance at cost of compile time and bin size
[profile.release]
codegen-units = 1
lto = "fat"

[profile.profiling]
inherits = "release"
# https://nnethercote.github.io/perf-book/profiling.html#debug-info
debug = "line-tables-only"
# https://nnethercote.github.io/perf-book/profiling.html#frame-pointers
# requires nightly and `unstable.profile-rustflags = true` in cargo config
# rustflags = ["-C", "force-frame-pointers=yes"]
